--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="static/slick/slick-theme.css"/>           
           
 
-        <title>HAHA</title>
+        <title>WatchDecider V1</title>
     </head>
     <body>
         <div class="header">
